feat: api completa seguindo o diagrama de classe

--- a/v3/api/src/main/resources/application.properties
+++ b/v3/api/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Dialeto do Postgres
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+
+# JWT Configuration
+jwt.secret=${JWT_SECRET:grupo2}
+jwt.expiration-ms=86400000
