--- a/v3/api/docker-compose.yml
+++ b/v3/api/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgres:18
+    image: postgres:latest
     container_name: geb_postgres
     environment:
       POSTGRES_DB: geb
