feat: atualização completa do projeto v3 com melhorias no backend e frontend

--- a/v3/api/src/main/resources/application.properties
+++ b/v3/api/src/main/resources/application.properties
@@ -9,11 +9,11 @@ spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-# Dialeto do Postgres
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+# Desabilitar inicialização de scripts SQL (usaremos DataInitializer)
+spring.sql.init.mode=never
 
 # JWT Configuration
-jwt.secret=${JWT_SECRET:grupo2}
+jwt.secret=ProjetoGebGrupo2SegredoSuperSeguro2025
 jwt.expiration-ms=86400000
