--- a/v3/api/src/main/resources/application.properties
+++ b/v3/api/src/main/resources/application.properties
@@ -4,15 +4,20 @@ spring.application.name=api
 spring.datasource.url=jdbc:postgresql://localhost:5432/geb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # --- JPA / Hibernate ---
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-# Desabilitar inicialização de scripts SQL (usaremos DataInitializer)
+# Desabilitar inicializacao de scripts SQL
 spring.sql.init.mode=never
+
+# Flyway Configuration
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
 
 # JWT Configuration
 jwt.secret=ProjetoGebGrupo2SegredoSuperSeguro2025
