--- a/v3/api/src/main/resources/application.properties
+++ b/v3/api/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # --- JPA / Hibernate ---
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -16,7 +16,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.sql.init.mode=never
 
 # Flyway Configuration
-spring.flyway.enabled=true
+spring.flyway.enabled=false
 spring.flyway.baseline-on-migrate=true
 
 # JWT Configuration
